[gd_scene load_steps=16 format=2]

[ext_resource path="res://players/squirrel/squirrel_animator.gd" type="Script" id=1]
[ext_resource path="res://assets/images/players/squirrel-running-spritesheet.png" type="Texture" id=2]
[ext_resource path="res://assets/images/players/squirrel-climbing-up-spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/images/players/squirrel-climbing-down-spritesheet.png" type="Texture" id=4]
[ext_resource path="res://assets/images/players/squirrel-standing-spritesheet.png" type="Texture" id=5]
[ext_resource path="res://assets/images/players/squirrel-jump-fall-spritesheet.png" type="Texture" id=6]
[ext_resource path="res://assets/images/players/squirrel-jump-rise-spritesheet.png" type="Texture" id=7]
[ext_resource path="res://assets/images/players/squirrel-resting-on-wall-spritesheet.png" type="Texture" id=8]


[sub_resource type="Animation" id=26]
resource_name = "ClimbDown"
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("ClimbDown:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "ClimbUp"
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("ClimbUp:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=27]
resource_name = "HoldWall"
length = 1.12
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("HoldWall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=28]
resource_name = "JumpFall"
length = 0.07
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("JumpFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=29]
resource_name = "JumpRise"
length = 0.07
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("JumpRise:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "Run"
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=31]
resource_name = "Stand"
length = 1.12
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Stand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="SquirrelAnimator" type="Node2D"]
z_index = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Run" type="Sprite" parent="."]
visible = false
position = Vector2( -9.68032, -3.99701 )
texture = ExtResource( 2 )
vframes = 4
hframes = 2
frame = 7

[node name="ClimbUp" type="Sprite" parent="."]
visible = false
position = Vector2( -0.401004, 12.5892 )
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 5

[node name="ClimbDown" type="Sprite" parent="."]
visible = false
position = Vector2( -0.403453, -13.0153 )
texture = ExtResource( 4 )
vframes = 2
hframes = 4

[node name="Stand" type="Sprite" parent="."]
position = Vector2( -10.6186, -5.00692 )
texture = ExtResource( 5 )
vframes = 4
hframes = 2
frame = 7

[node name="HoldWall" type="Sprite" parent="."]
visible = false
position = Vector2( -0.420696, 13.2978 )
texture = ExtResource( 8 )
vframes = 2
hframes = 4
frame = 7

[node name="JumpFall" type="Sprite" parent="."]
visible = false
position = Vector2( -12.1263, -8.44064 )
texture = ExtResource( 6 )

[node name="JumpRise" type="Sprite" parent="."]
visible = false
position = Vector2( -12.8436, -3.53401 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ClimbDown = SubResource( 26 )
anims/ClimbUp = SubResource( 8 )
anims/HoldWall = SubResource( 27 )
anims/JumpFall = SubResource( 28 )
anims/JumpRise = SubResource( 29 )
anims/Run = SubResource( 30 )
anims/Stand = SubResource( 31 )
